Added comments and moved some code to another class