@@ -17,8 +17,6 @@ import javafx.scene.layout.GridPane;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.VBox;
 import javafx.scene.text.Text;
-import javafx.scene.web.WebEngine;
-import javafx.scene.web.WebView;
 import javafx.stage.Stage;
 
 import java.io.FileInputStream;
@@ -33,8 +31,28 @@ public class HelloWorld extends Application {
         System.out.println("Doing what has to be done before closing");
     }
 
+   /*
+     Before running any of the following start() methods, make sure to do these two steps:
+
+      1) Download JavaFX SDK for your OS (from https://gluonhq.com/products/javafx/)
+      and unzip it in any directory.
+
+      2) Assuming you have unzipped JavaFX SDK into the folder /path/JavaFX/,
+       add the following options to the Java command that launches this class:
+
+        --module-path /path/JavaFX/lib
+        --add-modules=javafx.controls,javafx.fxml
+
+        If you run it from IDE, add these VM options to Run Configuration.
+    */
+
     // To run examples, remove the number
-    // from the name of one of the start() methods below:
+    // from the name of one of the start() methods below
+    // and put this number to the name of the start() method
+    // that is currently without number. For example,
+    // execute this class as-is, then
+    // rename start1() to start() and start() to start1()
+    // and execute this class again, so on.
 
     public void start1(Stage primaryStage) {
         Text txt = new Text("Hello, world!");
@@ -157,25 +175,6 @@ public class HelloWorld extends Application {
             primaryStage.setScene(scene);
             primaryStage.onCloseRequestProperty()
                     .setValue(e -> System.out.println("\nBye! See you later!"));
-            primaryStage.show();
-        } catch (Exception ex){
-            ex.printStackTrace();
-        }
-    }
-
-    public void start6(Stage primaryStage) {
-        try {
-            WebView wv = new WebView();
-            WebEngine we = wv.getEngine();
-            String html = "<html><center><h2>Hello, world!</h2></center></html>";
-            we.loadContent(html, "text/html");
-
-            Scene scene = new Scene(wv, 200, 60);
-
-            primaryStage.setTitle("My HTML page");
-            primaryStage.setScene(scene);
-            primaryStage.onCloseRequestProperty()
-                    .setValue(e -> System.out.println("Bye! See you later!"));
             primaryStage.show();
         } catch (Exception ex){
             ex.printStackTrace();
